--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "biopython",
+    "faiss-cpu",
     "huggingface-hub",
     "lightning",
     "lbster @ git+https://github.com/prescient-design/lobster.git",
