fix: lobster versioning
fixed issue with transformers command due to outdated Trie class call

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "biopython",
     "faiss-cpu",
-    "huggingface-hub",
+    "huggingface-hub==0.36.0",
     "lightning",
     "lbster @ git+https://github.com/prescient-design/lobster.git",
     "loguru",
@@ -22,6 +22,6 @@ dependencies = [
     "tmtools>=0.3.0",
     "torch",
     "tqdm",
-    "transformers>=4.40.0",
+    "transformers<4.45",
     "wandb",
 ]
